--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -205,7 +205,7 @@ rt_plot <- d_e1 %>%
   geom_jitter(width = 0.04, shape = 21, alpha = 0.9, color = "black", size = 1) + 
   geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
                color = "grey10", outlier.shape = NA, fill = "grey10") +
-  labs(y = c("response time (sec)"), x= NULL) +
+  labs(y = c("response time (s)"), x= NULL) +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.major = element_blank(),
         panel.grid.minor = element_blank(),
@@ -311,19 +311,24 @@ entropy_plot <- d_e1 %>%
 Putting it all together.
 
 ```{r}
-sub_plots <- cowplot::plot_grid(rt_plot, entropy_plot, labels = c("B", "C"), 
+sub_plots <- cowplot::plot_grid(rt_plot, entropy_plot, labels = c("B", "C"),
                                 ncol = 1,
                                 rel_heights = c(0.7,1))
 
-e1_plot <- cowplot::plot_grid(action_plot_e1, sub_plots, labels = c("A"),
-                              rel_widths = c(1, 0.9))
+# e1_plot <- cowplot::plot_grid(action_plot_e1, sub_plots, labels = c("A"),
+#                               label_x = 0.05,
+#                               rel_widths = c(1, 0.9))
+
+e1_plot <- cowplot::plot_grid(action_plot_e1, rt_plot, entropy_plot, labels = c("A", "B", "C"),
+                                ncol = 1,
+                                rel_heights = c(1, 1, 1))
 ```
 
 Save figure.
 
 ```{r}
-# ggsave("e1_plot.png", plot = e1_plot, width = 10, height = 4.5,
-#         path = here::here("writing/cogsci2018/figs"))
+ggsave("e1_plot.png", plot = e1_plot, width = 6, height = 10,
+        path = here::here("writing/cogsci2018/figs"))
 ```
 
 ## Experiment 2
@@ -448,7 +453,7 @@ e2_rt_plot <- d_e2 %>%
   geom_jitter(width = 0.04, shape = 21, alpha = 0.9, color = "black", size = 1) + 
   geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
                color = "grey10", outlier.shape = NA, fill = "grey10") +
-  labs(y = c("response time (sec)"), x= NULL) +
+  labs(y = c("response time (s)"), x= NULL) +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
@@ -577,12 +582,19 @@ sub_plots_e2 <- cowplot::plot_grid(e2_rt_plot, e2_ent_plot, phi,
                                    ncol = 1,
                                    rel_heights = c(0.7,0.8, 1))
 
-e2_plot <- cowplot::plot_grid(data_mod_comp, sub_plots_e2, labels = c("A"),
-                              rel_widths = c(1, 1))
+# e2_plot <- cowplot::plot_grid(data_mod_comp, sub_plots_e2, labels = c("A"),
+#                               label_x = 0.05,
+#                               rel_widths = c(1, 1))
+
+e2_plot <- cowplot::plot_grid(data_mod_comp, e2_rt_plot, e2_ent_plot, phi, 
+                                   labels = c("A", "B", "C", "D"), 
+                                   label_x = 0.03,
+                                   ncol = 1,
+                                   rel_heights = c(1.3, 0.7,0.8, 1))
 ```
 
 ```{r}
-# ggsave("e2_plot.png", plot = e2_plot, width = 10, height = 4.5,
-       # path = here::here("writing/cogsci2018/figs"))
+ggsave("e2_plot.png", plot = e2_plot, width = 4.5, height = 10,
+path = here::here("writing/cogsci2018/figs"))
 ```
 
