--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -8,7 +8,7 @@ author-information: >
     \author{{\large \bf Erica J. Yoon*}, {\large \bf Kyle MacDonald*}, {\large \bf Mika Asaba}, {\large \bf Hyowon Gweon}, \and {\large \bf Michael C. Frank} \\ \{ejyoon, kylem4, masaba, hyo, mcfrank\} @stanford.edu \\ Department of Psychology, Stanford University \\ *These authors contributed equally to this work.}
 
 abstract: 
-    "Our actions shape what we learn, and learners are proficient at choosing their actions to maximize their information gain. But learning often unfolds in social contexts where learners have both informational goals (e.g., to learn how something works) but also social goals (e.g., to appear competent). How do these different factors shape learners' decisions? We present a computational model that integrates the value of social and informational goals to predict the decisions that people will make in a simple active causal learning task. We show that an emphasis on performance or self-presentation goals leads to reduced chances of learning (Exp 1) and that social context can push learners to pursue performance-oriented actions even when the learning goal is highlighted (Exp 2). Our formal model of social-active learning successfully captures the empirical results. These findings are first steps towards understanding the role of social reasoning in active learning contexts."
+    "Our actions shape what we learn. Because of this dependency, learners are proficient at choosing their actions to maximize their information gain. But learning often unfolds in social contexts where learners have both informational goals (e.g., to learn how something works) but also social goals (e.g., to appear competent and impress others). How do these different factors shape learners' decisions? Here, we present a computational model that integrates the value of social and informational goals to predict the decisions that people will make in a simple active causal learning task. We show that an emphasis on performance or self-presentation goals leads to reduced chances of learning (Exp. 1) and that social context can push learners to pursue performance-oriented actions even when the learning goal is highlighted (Exp. 2). Our formal model of social-active learning successfully captures the empirical results. These findings are first steps towards understanding the role of social reasoning in active learning contexts."
     
 keywords:
     "active learning; social reasoning; information gain; OED; self-presentation; goal tradeoffs"
@@ -55,19 +55,19 @@ Active learning occurs when people have control over the sequence of information
 Empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human] suggests that active contexts lead to faster learning than passive contexts where people don't have control over the information flow. 
 
 But real-world learning usually takes place in rich social contexts 
-with teachers, peers, or others who can influence our learning. 
-Indeed, adults and even young children modulate their inferences 
-based on evidence that is generated and socially communicated by others [@shafto2012learning; @xu2007]
-But even when we learn from *our* own actions instead of others', 
-our social environment may affect our self-directed learning process.
-People must integrate the value of social goals (e.g., looking competent) and informational goals when deciding what to do. 
-While previous models have captured how we optimize learning, they have been agnostic to other social factors in the environment. 
+with teachers, peers, or other people who can directly influence our learning. 
+Indeed, adults and even preschool-aged children modulate their inferences 
+depending on how others (e.g., teachers) select their actions [@shafto2012learning], 
+and understand that socially communicated information licenses different inferences than information generated on their own [e.g., @xu2007]. 
+But even when we learn from *our* own actions instead of others', our social environment may affect our self-directed learning process.
+While previous models have captured how we optimize learning, either from our own actions or from others, they have been agnostic to other social factors that are ubiquitous in a learner's environment. 
+People must integrate the value of social goals (e.g., looking competent or knowledgeable) and informational goals when deciding what to do. 
 
 How can active learning models accommodate this richer set of utilities? 
 As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. 
 A key assumption underlying recent Bayesian models of human social cognition is that 
 people expect others to act approximately optimally given a utility function [e.g., @goodman2016; @jara2016]. 
-Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing].]
+Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing, @goodman2015relevant].]
 
 ```{r toy, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=1.5, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
 img <- png::readPNG("figs/toywolabel.png")
@@ -111,7 +111,7 @@ Below we describe each utility structure (see Fig.\ \ref{fig:model_diagram} for 
 
 ### Learning utility
 
-The *learning utility* captures the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the expected utility of different information seeking actions. 
+The *learning utility* captures the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005], which quantifies the expected utility of different information seeking actions. 
 The learner considers the hypothesis space $H(t)$, and wants to determine the correct hypothesis for the toy's causal mechanism. 
 He thinks about the utility of the outcome $m$ (e.g., music playing) to each possible action (e.g., button press), which is equal to the *information gain*: 
 the change in the learner's overall uncertainty (difference in entropy) before and after seeing the outcome. 
@@ -147,11 +147,6 @@ d_e1 <- d %>% filter(str_detect(experiment, "e1"))
 
 In Experiment 1 (Exp.\ 1), we first wanted to confirm that participants would choose different actions depending on what goal was highlighted. We were also interested in how people would act when no explicit goal was specified within the task. Participants were asked to act on a toy with an uncertain causal mechanism, and were assigned to different goal conditions: (1) learning (learn how the toy works), (2) performance (make the toy play music), (3) presentation (impress their boss), and (4) no goal specified. We hypothesized that participants would choose an informative action more often in the following order of goal conditions (decreasing): learning, no goal, performance, and presentation.\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection at \url{https://osf.io/kcjau}.}
 
-```{r e1_behav_results_plot, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Behavioral results for Exp.\ 1. A: Proportion of action decisions for each goal condition. Error bars represent 95\\% binomial CIs computed using a Bayesian beta-binomial model. B: Participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Participants' belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action."}
-png::readPNG(here::here(image_path, "e1_plot.png")) %>% 
-  grid::grid.raster()
-```
-
 ## Method
 
 ### Participants
@@ -178,6 +173,11 @@ We recruited `r n_run` participants (45-51 per condition) on Amazon’s Mechanic
 
 We presented images and instructions for three different toys that looked very similar but worked in different ways (see captions for Fig.\ \ref{fig:model_diagram}).
 The instructions conveyed that pressing the button and pulling the handle was immediately rewarding but uninformative (fails to disambiguate the causal mechanism). In contrast, either of the single actions was completely disambiguating, but was uncertain to produce an immediate outcome. Each toy had a label at the front, indicating the correct action(s)--outcome link.
+
+```{r e1_behav_results_plot, fig.env = "figure", fig.pos = "H", fig.align='center', fig.width=2, fig.height=6, num.cols.cap=1, out.width='95%', fig.cap = "Behavioral results for Exp.\ 1. A: Proportion of action decisions for each goal condition. Error bars are 95\\% binomial CIs computed using a Bayesian beta-binomial model. B: Response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action."}
+png::readPNG(here::here(image_path, "e1_plot.png")) %>% 
+  grid::grid.raster()
+```
 
 We asked participants to act on one of these toys; importantly, the given toy was missing its label, leading to uncertainty about its causal structure. We randomly assigned participants into four goal conditions. In the *No-Goal* condition we did not specify any goal for participants. In the *Learning*, *Performance*, and *Presentation* conditions, we asked participants to imagine they were toy developers and one day their boss approached them. We instructed participants to: figure out the correct label for the toy (*Learning*); make the toy play music (or turn the light on; *Performance*); or impress their boss and show that they are competent (*Presentation*). We asked participants to select an action out of the following set: "press the button", "pull the handle", or "press the button and pull the handle." The order of actions was randomized.
 
@@ -285,11 +285,6 @@ e1_ent_means <- d_models$ent_samples_e1 %>%
 
 We quantified participants’ beliefs about the toy using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
 We modeled change in entropy as a function of goal condition and participants' action choices: \texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig.\ \ref{fig:e1_behav_results_plot}C). Across all conditions, people who selected the single action showed a greater reduction in entropy ($\beta$ = `r e1_contrasts_ent$ent_change[5]`, [`r e1_contrasts_ent$hdi_lower[5]`, `r e1_contrasts_ent$hdi_upper[5]`], i.e., learned more from their action. We did not see evidence of an interaction between goal and action selection. However, a larger proportion of participants selected a single action in the Learning context, so learning was more likely in this scenario.
-
-```{r e2_results, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.4, out.width= "95%", fig.align='center', fig.cap = "Behavioral and model fitting results for Exp.\ 2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig.\ 3."}
-png::readPNG(here::here(image_path, "e2_plot_wBDA.png")) %>%
-  grid::grid.raster()
-```
 
 # Experiment 2
 
@@ -487,6 +482,12 @@ We also inferred another parameter of the cognitive model, the optimality parame
 
 The fitted model predictions of action choices are shown in Fig.\ \ref{fig:e2_results}A (bottom). The model's expected posteriors over action choices capture key differences between conditions: the single action was more likely for no-social than social conditions overall, but not when the performance goal was highlighted. The model was able to predict the distribution of action responses with high accuracy $r^2(21)$ = `r cor2`.
 
+```{r e2_results, fig.env = "figure", num.cols.cap=1, fig.pos = "H", fig.width=2, out.width= "98%", fig.align='center', fig.cap = "Behavioral and model fitting results for Exp.\ 2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig.\ 3."}
+
+png::readPNG(here::here(image_path, "e2_plot.png")) %>%
+  grid::grid.raster()
+```
+
 # General Discussion
 
 How do social contexts shape active learning? We proposed that people integrate informational vs. social goals when deciding what to do. In two experiments, we showed that people chose more informative actions when learning goals were highlighted and in the absence of a relevant social context (no boss present), while they chose more immediately rewarding actions when performance/presentational goals were highlighted, especially when a boss was present. When no goal was specified, people's behavior seemed to reflect a mixture of goals. Our model of social-active learning successfully captured key patterns in the people's action decisions.  
@@ -504,7 +505,7 @@ Another interesting open question is how our model could be used to understand a
 Overall, this work represents a first step to answering these rich questions that 
 ultimately seek to unify theories on active learning and social reasoning.
 
-\vspace{1em} \fbox{\parbox[b][][c]{7.3cm}{\centering All data, model, and analysis codes are available at: \url{https://github.com/kemacdonald/soc-info}}} \vspace{1em}
+\vspace{1em} \fbox{\parbox[b][][c]{7.3cm}{\centering All experiments, data, model, and analysis codes are in the online repository for this project: \url{https://github.com/kemacdonald/soc-info}}} \vspace{1em}
 \noindent
 
 # Acknowledgements
