--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -67,7 +67,7 @@ How can active learning models accommodate this richer set of utilities?
 As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. 
 A key assumption underlying recent Bayesian models of human social cognition is that 
 people expect others to act approximately optimally given a utility function [e.g., @goodman2016; @jara2016]. 
-Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing, @goodman2015relevant].]
+Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing; @goodman2015relevant].]
 
 ```{r toy, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=1.5, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
 img <- png::readPNG("figs/toywolabel.png")
@@ -98,11 +98,11 @@ In two experiments, we show that emphasizing performance or self-presentation (s
 
 # Computational model
 
-We model a learner $L$ who chooses his action $a$ approximately optimally (as per optimality parameter $\lambda$) based on the expected total utility $U_{t}$ given his action $a$ and presence of an observer $o$.
+We model a learner $L$ who chooses his action $a$ approximately optimally (as per optimality parameter $\lambda$) based on the expected total utility $U_{t}$ given his action $a$ and presence of an observer $o$:
 
-$$ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{t}(a,o)]),$$ 
+$$ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{t}(a,o)]).$$ 
 \noindent
-where the total utility is defined as:
+The total utility is defined as:
 $$U_{t}(a,o) = \phi_{learn} \cdot U_{learn}(a) + \phi_{perf} \cdot U_{perf}(a) + \delta^o \cdot \phi_{pres} \cdot U_{pres}(a),$$
 \noindent
 where $\phi$s are weights that are inferred for each utility from data and
@@ -111,7 +111,7 @@ Below we describe each utility structure (see Fig.\ \ref{fig:model_diagram} for 
 
 ### Learning utility
 
-The *learning utility* captures the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005], which quantifies the expected utility of different information seeking actions. 
+The *learning utility* captures the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; e.g. @nelson2005], which quantifies the expected utility of different information seeking actions. 
 The learner considers the hypothesis space $H(t)$, and wants to determine the correct hypothesis for the toy's causal mechanism. 
 He thinks about the utility of the outcome $m$ (e.g., music playing) to each possible action (e.g., button press), which is equal to the *information gain*: 
 the change in the learner's overall uncertainty (difference in entropy) before and after seeing the outcome. 
@@ -135,7 +135,7 @@ $$ U_{perf} = P_L(m | a).$$
 
 When there is another person present to observe the learner's action, the observer $O$ is expected to reason about the learner $L$'s competence, equal to whether the learner was able to make the toy produce an effect.
 The learner thinks about the observer's inferential process, and the expected *presentational* utility ($U_{pres}$) is based on maximizing the apparent competence inferred by the observer:
-$$ U_{pres} = P_O(m | a)$$.
+$$ U_{pres} = P_O(m | a),$$
 \noindent
 where $P_O(m | a)$ is the observer's own estimate of the likelihood of an effect given the learner's action.^[We assume that the observer is naive about the toy's causal structure; otherwise, if the observer is knowledgeable, $U_{perf}$ and $U_{pres}$ will diverge, which is an important consideration for future work.] 
 
@@ -174,12 +174,12 @@ We recruited `r n_run` participants (45-51 per condition) on Amazon’s Mechanic
 We presented images and instructions for three different toys that looked very similar but worked in different ways (see captions for Fig.\ \ref{fig:model_diagram}).
 The instructions conveyed that pressing the button and pulling the handle was immediately rewarding but uninformative (fails to disambiguate the causal mechanism). In contrast, either of the single actions was completely disambiguating, but was uncertain to produce an immediate outcome. Each toy had a label at the front, indicating the correct action(s)--outcome link.
 
-```{r e1_behav_results_plot, fig.env = "figure", fig.pos = "H", fig.align='center', fig.width=2, fig.height=6, num.cols.cap=1, out.width='95%', fig.cap = "Behavioral results for Exp.\ 1. A: Proportion of action decisions for each goal condition. Error bars are 95\\% binomial CIs computed using a Bayesian beta-binomial model. B: Response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action."}
+```{r e1_behav_results_plot, fig.env = "figure", fig.pos = "H", fig.align='center', fig.width=2, fig.height=6, num.cols.cap=1, out.width='95%', fig.cap = "Behavioral results for Exp.\ 1. A: Proportion of action decisions for each goal condition. Error bars are 95\\% binomial CIs computed using a Bayesian beta-binomial model. B: Response times on the action decisions, where each point represents a participant. FIXME C: Belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action. FIXME"}
 png::readPNG(here::here(image_path, "e1_plot.png")) %>% 
   grid::grid.raster()
 ```
 
-We asked participants to act on one of these toys; importantly, the given toy was missing its label, leading to uncertainty about its causal structure. We randomly assigned participants into four goal conditions. In the *No-Goal* condition we did not specify any goal for participants. In the *Learning*, *Performance*, and *Presentation* conditions, we asked participants to imagine they were toy developers and one day their boss approached them. We instructed participants to: figure out the correct label for the toy (*Learning*); make the toy play music (or turn the light on; *Performance*); or impress their boss and show that they are competent (*Presentation*). We asked participants to select an action out of the following set: "press the button", "pull the handle", or "press the button and pull the handle." The order of actions was randomized.
+We asked participants to act on one of these toys; importantly, the given toy was missing its label, leading to uncertainty about its causal structure. We randomly assigned participants into four goal conditions. In the *No-goal* condition we did not specify any goal for participants. In the *Learning*, *Performance*, and *Presentation* conditions, we asked participants to imagine they were toy developers and one day their boss approached them. We instructed participants to: figure out the correct label for the toy (*Learning*); make the toy play music (or turn the light on; *Performance*); or impress their boss and show that they are competent (*Presentation*). We asked participants to select an action out of the following set: "press the button", "pull the handle", or "press the button and pull the handle." The order of actions was randomized.
 
 ### Procedure
 
@@ -314,7 +314,7 @@ n_excluded_e2 <- n_run_e2 - sum(e2_excluded$n)
 n_analyzed_e2 <- sum(e2_excluded$n)
 ```
 
-Using the same recruitment and exclusion criteria as Exp.\ 1, we recruited `r n_run_e2` participants (42-51 per condition), and `r n_analyzed_e2` participants were included in our final analysis.
+Using the same recruitment and exclusion criteria as Exp.\ 1, we recruited `r n_run_e2` participants (42-51 per condition), and included `r n_analyzed_e2` participants in our final analysis.
 
 ### Stimuli and Design
 
@@ -366,7 +366,7 @@ ms_act_e2 <- d_models$action_logit_samples_e2 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the No-goal-no-social condition as the reference category. We replicated the key finding from Exp.\ 1: participants selected a "single" action more often when they were in a context that emphasized a learning goal, followed by the no-goal, performance, and presentation conditions (Fig.\ \ref{fig:e2_results}A). There was a main effect of social context, with participants being less likely to select the single action when their boss was present ($\beta =$ `r e2_contrasts_act_soc$prop[5]`, [`r e2_contrasts_act_soc$hdi_lower[5]`, `r e2_contrasts_act_soc$hdi_upper[5]`]). Finally, there was evidence for a reliable interaction between goal condition and social context such that the effect of social context was present in the Learning and No-goal conditions, but not in the Performance condition ($\beta$ $_{int}$ = `r e2_contrasts_act$prop[4]`, [`r e2_contrasts_act$hdi_lower[4]`, `r e2_contrasts_act$hdi_upper[4]`]).
+We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the No-goal-no-social condition as the reference category. We replicated the key finding from Exp.\ 1: participants selected a "single" action more often in the Learning goal condition, followed by the No-goal, Performance, and Presentation conditions (Fig.\ \ref{fig:e2_results}A). There was a main effect of social context, with participants being less likely to select the single action when their boss was present ($\beta =$ `r e2_contrasts_act_soc$prop[5]`, [`r e2_contrasts_act_soc$hdi_lower[5]`, `r e2_contrasts_act_soc$hdi_upper[5]`]). Finally, there was evidence for a reliable interaction between goal condition and social context such that the effect of social context was present in the Learning and No-goal conditions, but not in the Performance condition ($\beta$ $_{int}$ = `r e2_contrasts_act$prop[4]`, [`r e2_contrasts_act$hdi_lower[4]`, `r e2_contrasts_act$hdi_upper[4]`]).
 
 ### Action decision times:
 
@@ -476,13 +476,13 @@ cor2 = round(with(data_mod, cor(data_prob, prob, use="na.or.complete"))^2,3)
 In our paradigm, participants chose an action based on a certain goal.\footnote{For action priors, we used a separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals. We used mean likelihood for each action choice as baseline priors in our model.}
 We assumed that the goal descriptions (e.g., "impress your boss") conveyed to the participants a particular set of goal weights {$\phi_{learn}$, $\phi_{perf}$, $\phi_{pres}$} used to generate action choices. We put uninformative priors on these weights ($\phi \sim Unif(0,1)$) and inferred their credible values for each social-goal condition, using Bayesian data analytic techniques [@lee2014bayesian]. 
 
-The inferred goal weights were consistent with what we predicted (Fig.\ \ref{fig:e2_results}D). $\phi_{learn}$ was at its highest for No-social learning condition. On the other hand, the $\phi_{perf}$ and $\phi_{pres}$ together make up the highest portion in the presentation condition, with high social pressure to present competence compared to other conditions.
+The inferred goal weights were consistent with what we predicted (Fig.\ \ref{fig:e2_results}D). $\phi_{learn}$ was highest for No-social learning condition, whereas the $\phi_{perf}$ and $\phi_{pres}$ together made up the highest portion in the presentation condition, with high social pressure to appear competent compared to other conditions.
 
-We also inferred another parameter of the cognitive model, the optimality parameter $\lambda$. We put uninformative prior on the parameter ($\lambda \sim Unif(0,10)$ and inferred its posterior credible value from the data. We ran 4 MCMC chains for 100,000 iterations, discarding the first 50,000 for burnin. The Maximum A- Posteriori (MAP) estimate and 95% Highest Probability Density Interval (HDI) for $\lambda$ was `r optimality$mean` [`r optimality$ci_lower`, `r optimality$ci_upper`]. 
+We also inferred another parameter of the cognitive model, the optimality parameter $\lambda$. We put uninformative prior on the parameter ($\lambda \sim Unif(0,10)$) and inferred its posterior credible value from the data. We ran 4 MCMC chains for 100,000 iterations, discarding the first 50,000 for burnin. The Maximum A- Posteriori (MAP) estimate and 95% Highest Probability Density Interval (HDI) for $\lambda$ was `r optimality$mean` [`r optimality$ci_lower`, `r optimality$ci_upper`]. 
 
 The fitted model predictions of action choices are shown in Fig.\ \ref{fig:e2_results}A (bottom). The model's expected posteriors over action choices capture key differences between conditions: the single action was more likely for no-social than social conditions overall, but not when the performance goal was highlighted. The model was able to predict the distribution of action responses with high accuracy $r^2(21)$ = `r cor2`.
 
-```{r e2_results, fig.env = "figure", num.cols.cap=1, fig.pos = "H", fig.width=2, out.width= "98%", fig.align='center', fig.cap = "Behavioral and model fitting results for Exp.\ 2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig.\ 3."}
+```{r e2_results, fig.env = "figure", num.cols.cap=1, fig.pos = "H", fig.width=1.5, fig.height=5.5, out.width= "90%", fig.align='center', fig.cap = "Behavioral and model fitting results for Exp.\ 2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig.\ 3."}
 
 png::readPNG(here::here(image_path, "e2_plot.png")) %>%
   grid::grid.raster()
@@ -495,9 +495,9 @@ How do social contexts shape active learning? We proposed that people integrate 
 This work brought active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice that maximizes information gain, and Bayesian modeling framework, which formalizes a process of recursive social reasoning. Thus, we included social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of multiple goals -- informational and social. 
 
 There are limitations to this work that present opportunities for future work. 
-First, we did not differentiate between performance and presentation goals, since the choice of doing both actions satisfies both of these goals in our current paradigm. Future work enriching the space of possible actions can tease apart actions driven by self-presentation. 
-Second, we used a very particular social context (the presence of a boss) to influence people’s action choices. It remains an open question as to how our results would generalize to other kinds of observers with different goals (e.g., a teacher who wants the learner to select actions that help her learn). 
-Second, we used a rather particular social context (presence of a boss) to maximize the emphasis on presentational goals. Our model can be extended to explain a richer set of social considerations, such as observers with different goals (e.g., a teacher who wants the learner to select actions that help her learn). 
+First, we did not differentiate between performance and presentation goals, since the choice of doing both actions satisfies both of these goals in our paradigm. Enriching the space of possible actions could tease apart actions driven by self-presentation. 
+Second, we used a particular social context (the presence of a boss) to influence people’s action choices. It remains an open question as to how our results would generalize to other kinds of observers with different goals (e.g., a teacher who wants the learner to select actions that help her learn). 
+Second, we used a rather particular social context (the presence of a boss) to emphasize presentational goals. Our model can be extended to explain a richer set of social considerations, such as other kinds of observers (e.g., a teacher who wants the learner to select actions that help her learn). 
 Third, we limited people to a single action choice. While this allowed a clean measurement of our condition manipulations, real-world learning often involves sequential decision-making that could cause learners to prioritize different goals depending on their prior actions or the probability of interacting with an observer in the future.
 
 Another interesting open question is how our model could be used to understand active learning over development. Our framework could allow us to measure changes in children's goal preferences as they develop better social reasoning and meta-cognitive abilities. One prediction is that young children focus on learning goals earlier on when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals.
@@ -510,7 +510,7 @@ ultimately seek to unify theories on active learning and social reasoning.
 
 # Acknowledgements
 
-This work was supported by an NSERC postgraduate doctoral scholarship to EJY, an NSF GRFP to KM, a Jacobs Foundation Fellowship to MCF, and NSF #1456077.
+This work was supported by an NSERC postgraduate doctoral scholarship to EJY, NSF GRFPs to KM and MA, a Jacobs Foundation Fellowship to MCF, and NSF #1456077.
 
 # References 
 
