--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -253,3 +253,12 @@
   year={2014},
   publisher={Cambridge university press}
 }
+
+@inproceedings{frank2014modeling,
+  title={Modeling the dynamics of classroom education using teaching games},
+  author={Frank, Michael},
+  booktitle={Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume={36},
+  number={36},
+  year={2014}
+}
