--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -7,6 +7,9 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
+```
+
+```{r libraries}
 library(binom)
 library(knitr); library(magrittr); library(tidyverse); library(here); 
 library(grid); library(jsonlite); library(ggthemes)
@@ -71,7 +74,7 @@ d_data %>%
   kable()
 ```
 
-Now filter if the participant got fewer than 3 out of 3 manipulation checks correct. 
+Now filter if the participant got fewer than 2 out of 3 manipulation checks correct. 
 
 ```{r}
 d_data %<>% filter(manip_check_score >= 2)
@@ -164,20 +167,19 @@ action_plot_e1 <- d_e1 %>%
   geom_linerange(aes(x = condition, ymin = lower, ymax = upper), inherit.aes = F,
                  color = "black", alpha = 0.6, size = 1,
                  data = hpd_final) +
+  annotate("text", x = 3.5, y = 0.8, label = "Single action choices") +
   lims(y = c(0,1)) +
   guides(alpha = F) +
   scale_alpha_discrete(range = c(0.6, 1)) +
   scale_fill_grey(start = 0.1, end = 0.6)+ 
   # ggthemes::scale_fill_ptol() +
-  labs(x = NULL, y = "Prop. participants choosing single action", fill = "action response:") +
+  labs(x = NULL, y = "Prop. participants", fill = "action response:") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
         plot.margin=unit(c(0.5,1,0.5,1),"cm"),
         text = element_text(size = 12),
         axis.text.x.top = element_text(vjust = -0.5)) 
-
-action_plot_e1
 ```
 
 Make a table of the raw counts.
@@ -201,10 +203,11 @@ rt_plot <- d_e1 %>%
   filter(action_trial_time < mean(action_trial_time) + 2 * sd(action_trial_time),
          action_trial_time > mean(action_trial_time) - 2 * sd(action_trial_time)) %>% 
   ggplot(aes(x = condition, y = action_trial_time)) +
-  lims(y = c(0,100)) + 
-  geom_jitter(width = 0.04, shape = 21, alpha = 0.9, color = "black", size = 1) + 
-  geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
-               color = "grey10", outlier.shape = NA, fill = "grey10") +
+  lims(y = c(0,80)) + 
+ # geom_point(alpha = 0.4, color = "black", size = 1,
+  #           position =  position_nudge(x = -0.2, y = 0)) + 
+  geom_boxplot(alpha = 0.7, width = 0.3, color = "grey10", 
+               outlier.shape = NA, fill = "grey10") +
   labs(y = c("response time (s)"), x= NULL) +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.major = element_blank(),
@@ -213,61 +216,15 @@ rt_plot <- d_e1 %>%
         text = element_text(size = 12))
 ```
 
-## Plot belief change
-
-here we plot belief change as a function of condition and the action that participants chose.
-
-```{r}
-d_e1 %>% 
-  ggplot(aes(x = hypothesis_type, y = slider_value_normalized, 
-             color = action_response)) +
-  geom_line(aes(group = id), size = 0.5) + 
-  geom_jitter(width = 0, size = 2) +
-  lims(y = c(0,1)) +
-  labs(x = NULL, y = "Belief") + 
-  facet_grid(hypothesis~condition) +
-  ggthemes::scale_color_ptol() +
-  theme(legend.position = "top",
-        panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
-```
-
-Get the total belief change for each participant and plot as a function of condition.
-
-```{r fig.width=8, out.width="80%", fig.asp = "0.6"}
-d_e1 %>% 
-  select(id, condition, hypothesis, hypothesis_type, slider_value_normalized, 
-         action_response) %>% 
-  spread(key = hypothesis_type, slider_value_normalized) %>% 
-  mutate(belief_change = (prior - posterior) %>% abs()) %>% 
-  mutate(action_belief = ifelse(action_response == hypothesis, TRUE, FALSE)) %>% 
-  filter(action_belief == TRUE) %>% 
-  group_by(id, condition, action_response) %>% 
-  summarise(ss_m = mean(belief_change)) %>% 
-  ggplot(aes(x = action_response, y = ss_m, color = condition)) +
-  geom_violin(draw_quantiles = 0.5, trim = T, width = 1, size = 1, 
-              adjust = 1, fill = NA) +
-  geom_jitter(width = 0.07, alpha = 1, shape = 21, color = "darkgrey") +
-  ggthemes::scale_color_ptol() +
-  facet_wrap(~condition, ncol = 4) 
-```
-
-## Entropy analysis
-
-Here, we use KL-divergence as our measure of entropy change computation that takes into account where the participant started (prior beliefs). 
-
-```{r score ig for each participant}
-d_e1 %<>%
-  split(.$id) %>%
-  map_df(ig)
-```
+### Entropy analysis
 
 Plot entropy change as a function of condition.
 
 ```{r entropy_plot_violin_e1, eval = F}
 entropy_plot <- d_e1 %>% 
   mutate(action_r_collap = fct_relevel(action_r_collap, "single")) %>%
-  distinct(id, condition, social_condition, entropy_change, action_r_collap) %>% 
-  ggplot(aes(x = condition, y = entropy_change, color = action_r_collap,
+  distinct(id, condition, social_condition, entropy_change_2prior, action_r_collap) %>% 
+  ggplot(aes(x = condition, y = entropy_change_2prior, color = action_r_collap,
              fill = action_r_collap)) +
   # geom_hline(yintercept = 0, linetype = "solid", color = "grey20") +
   geom_hline(yintercept = -1.5, linetype = "solid", color = "grey20") +
@@ -287,57 +244,49 @@ entropy_plot <- d_e1 %>%
         text = element_text(size = 12))
 ```
 
-```{r entropy_plot boxplot e1}
-entropy_plot <- d_e1 %>% 
+```{r ig boxplot e1}
+ig_plot <- d_e1 %>% 
   distinct(id, condition, social_condition, ig, action_r_collap) %>% 
   ggplot(aes(x = condition, y = ig, color = fct_rev(action_r_collap),
              fill = fct_rev(action_r_collap))) +
   geom_hline(yintercept = 0, linetype = "solid", color = "grey20") +
-  geom_jitter(alpha = 0.85, shape = 21, size = 1, 
-              position = position_jitterdodge(dodge.width = 0.3, jitter.width = .05)) +
-  geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
-               color = "grey10", outlier.colour = "white") +
+  #geom_point(alpha = 0.85, shape = 21, size = 1, 
+   #           position = position_jitterdodge(dodge.width = 1, jitter.width = 0)) +
+  geom_boxplot(position = position_dodge(width = 0.3), alpha = 1, width = 0.3,
+               color = "grey10", outlier.shape = NA) +
   ggthemes::scale_color_ptol() +
   ggthemes::scale_fill_ptol() +
   lims(y = c(-2, 2)) +
   guides(color = F) +
-  labs(x = NULL, y = "entropy change", fill = "action response: ") +
+  labs(x = NULL, y = "info. gain (bits)", fill = "action response: ") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
 
-Putting it all together.
+### Build E1 plot
 
-```{r}
-sub_plots <- cowplot::plot_grid(rt_plot, entropy_plot, labels = c("B", "C"),
-                                ncol = 1,
-                                rel_heights = c(0.7,1))
-
-# e1_plot <- cowplot::plot_grid(action_plot_e1, sub_plots, labels = c("A"),
-#                               label_x = 0.05,
-#                               rel_widths = c(1, 0.9))
-
-e1_plot <- cowplot::plot_grid(action_plot_e1, rt_plot, entropy_plot, labels = c("A", "B", "C"),
+```{r e1 plot grid}
+e1_plot <- cowplot::plot_grid(action_plot_e1, rt_plot, ig_plot, labels = c("A", "B", "C"),
                                 ncol = 1,
                                 rel_heights = c(1, 1, 1))
 ```
 
-Save figure.
+### Save figure.
 
-```{r}
-ggsave("e1_plot.png", plot = e1_plot, width = 6, height = 10,
+```{r save e1 plot}
+ggsave("e1_plot.png", plot = e1_plot, width = 5, height = 10,
         path = here::here("writing/cogsci2018/figs"))
 ```
 
 ## Experiment 2
 
-```{r}
+```{r e2 filter}
 d_e2 <- filter(d_data, str_detect(experiment, pattern = "e2"))
 ```
 
-Action plot
+### Action plot
 
 ```{r get prop credible intervals e2}
 hpd_e2 <- d_e2 %>% 
@@ -365,15 +314,14 @@ action_plot_e2 <- d_e2 %>%
                  color = "grey50", alpha = 0.6, size = 1,
                  position = position_dodge(width = 0.6),
                  data = hpd_e2) +
+  annotate("text", x = 3.5, y = 0.8, label = "Single action choices") +
   lims(y = c(0,1)) +
-  labs(x = NULL, y = "Prop. participants choosing single action", fill = "context:") +
+  labs(x = NULL, y = "Prop. participants", fill = "context:") +
   scale_fill_grey(start = 0.1, end = 0.6)+ 
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
         plot.margin=unit(c(0.5,1.2,0.5,1),"cm"))
-
-action_plot_e2
 ```
 
 ```{r bda}
@@ -424,7 +372,11 @@ data_mod <- rbind(postpred %>% mutate(source = "model"),
                            "Performance\n" = "performance",
                            "Presentation\n" = "presentation"
                            ))
+```
 
+Make the data vs. model comparison plot.
+
+```{r e2 model-data comp plot}
 data_mod_comp <- ggplot(data_mod, aes(x = goal, y = prob, fill = context)) +
   geom_bar(stat = "identity", width = 0.6, position = position_dodge()) +
   geom_linerange(aes(x = goal, ymin = ci_lower, ymax = ci_upper, 
@@ -432,7 +384,8 @@ data_mod_comp <- ggplot(data_mod, aes(x = goal, y = prob, fill = context)) +
                  color = "grey50", alpha = 0.6, size = 1,
                  position = position_dodge(width = 0.6)) +
   lims(y = c(0,1)) +
-  labs(x = NULL, y = "Prop. participants choosing single action", fill = "context:") +
+  annotate("text", x = 3.5, y = 0.8, label = "Single action choices") +
+  labs(x = NULL, y = "Prop. participants", fill = "context:") +
   scale_fill_grey(start = 0.1, end = 0.6)+ 
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
@@ -441,7 +394,7 @@ data_mod_comp <- ggplot(data_mod, aes(x = goal, y = prob, fill = context)) +
   facet_grid(source~.)
 ```
 
-RT plot
+### RT plot
 
 ```{r rt plot e2}
 e2_rt_plot <- d_e2 %>% 
@@ -450,7 +403,7 @@ e2_rt_plot <- d_e2 %>%
          action_trial_time > mean(action_trial_time) - 2 * sd(action_trial_time)) %>% 
   ggplot(aes(x = condition, y = action_trial_time)) +
   lims(y = c(0,100)) + 
-  geom_jitter(width = 0.04, shape = 21, alpha = 0.9, color = "black", size = 1) + 
+  #geom_jitter(width = 0.04, shape = 21, alpha = 0.9, color = "black", size = 1) + 
   geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
                color = "grey10", outlier.shape = NA, fill = "grey10") +
   labs(y = c("response time (s)"), x= NULL) +
@@ -458,9 +411,11 @@ e2_rt_plot <- d_e2 %>%
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm")) 
+
+e2_rt_plot
 ```
 
-### Entropy change
+### Entropy plot
 
 ```{r entropy plot violin e2, eval = F}
 e2_ent_plot <- d_e2 %>% 
@@ -483,29 +438,23 @@ e2_ent_plot <- d_e2 %>%
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
 
-Here, we use KL-divergence as our measure of entropy change computation that takes into account where the participant started (prior beliefs). 
+### IG plot
 
-```{r score ig for each participant}
-d_e2 <- d_e2 %>%
-  split(.$id) %>%
-  map_df(ig)
-```
-
-```{r e2 entropy kl plot}
-e2_ent_plot <- d_e2 %>% 
+```{r e2 ig kl plot}
+e2_ig_plot <- d_e2 %>% 
   distinct(id, condition, social_condition, ig, action_r_collap) %>% 
   ggplot(aes(x = condition, y = ig, color = fct_rev(action_r_collap),
              fill = fct_rev(action_r_collap))) +
   geom_hline(yintercept = 0, linetype = "solid", color = "grey20") +
-  geom_jitter(alpha = 0.85, shape = 21, size = 1, 
-              position = position_jitterdodge(dodge.width = 0.3, jitter.width = .05)) +
-  geom_boxplot(position = position_dodge(width = 0.3), alpha = 0.7, width = 0.3,
+ # geom_jitter(alpha = 0.85, shape = 21, size = 1, 
+  #            position = position_jitterdodge(dodge.width = 0.3, jitter.width = .05)) +
+  geom_boxplot(position = position_dodge(width = 0.3), alpha = 1, width = 0.3,
                color = "grey10", outlier.colour = "white") +
   ggthemes::scale_color_ptol() +
   ggthemes::scale_fill_ptol() +
   lims(y = c(-2, 2)) +
   guides(color = F) +
-  labs(x = NULL, y = "entropy change", fill = "action response: ") +
+  labs(x = NULL, y = "info. gain (bits)", fill = "action response: ") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
@@ -542,7 +491,11 @@ d_phi_explore <- d_phi %>%
   mutate(mean = case_when(priority == "exploitation" ~ "0", 
                           TRUE ~ as.character(as.numeric(mean)))) %>%
   mutate(mean = as.numeric(as.character(mean)))
+```
 
+Make the BDA "phi" plot.
+
+```{r bda phi plot}
 phi <- d_phi %>%
   ggplot(., aes(x = interaction(context, goal), y = mean, fill = phi, 
                 group = phi, order=phi)) +
@@ -576,25 +529,20 @@ phi <- d_phi %>%
     legend.text=element_text(size=8))
 ```
 
-```{r}
-sub_plots_e2 <- cowplot::plot_grid(e2_rt_plot, e2_ent_plot, phi, 
-                                   labels = c("B", "C", "D"), 
-                                   ncol = 1,
-                                   rel_heights = c(0.7,0.8, 1))
+### Put plots together
 
-# e2_plot <- cowplot::plot_grid(data_mod_comp, sub_plots_e2, labels = c("A"),
-#                               label_x = 0.05,
-#                               rel_widths = c(1, 1))
-
-e2_plot <- cowplot::plot_grid(data_mod_comp, e2_rt_plot, e2_ent_plot, phi, 
+```{r e2 build plot}
+e2_plot <- cowplot::plot_grid(data_mod_comp, e2_rt_plot, e2_ig_plot, phi, 
                                    labels = c("A", "B", "C", "D"), 
                                    label_x = 0.03,
                                    ncol = 1,
                                    rel_heights = c(1.3, 0.7,0.8, 1))
 ```
 
+### Save figure
+
 ```{r}
-ggsave("e2_plot.png", plot = e2_plot, width = 4.5, height = 10,
-path = here::here("writing/cogsci2018/figs"))
+ggsave("e2_plot.png", plot = e2_plot, width = 4.8, height = 11,
+       path = here::here("writing/cogsci2018/figs"))
 ```
 
