--- a/R/03_models.Rmd
+++ b/R/03_models.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 # Setup
 
-```{r}
+```{r libraries}
 library(magrittr); library(tidyverse); library(here); 
 library(rstanarm); library(brms)
 source(here("R/soc_info_helpers.R"))
@@ -19,19 +19,17 @@ set.seed (3875)
 
 Read data. 
 
-```{r}
+```{r read data}
 d_path <- "data/03_merged_data/"
 d <- read_csv(here(d_path, "goal_actions_master.csv")) 
 ```
 
 # Experiment 1 
 
-## E1: Logit model of action selections
-
-```{r}
+```{r e1 data filter}
 d_model_e1 <- d %>%
   filter(manip_check_score >= 2, str_detect(experiment, "e1")) %>% 
-  distinct(id, condition, action_response, action_r_collap, action_trial_time, 
+  distinct(id, condition, action_response, action_r_collap, action_trial_time, ig,
            entropy_change, prior, posterior, slider_value_normalized, hypothesis_type) %>% 
   mutate(condition_fact = factor(condition, 
                                  levels = c("nogoal", "learning", "presentation",
@@ -40,6 +38,8 @@ d_model_e1 <- d %>%
                                        levels = c("button", "handle", "both")),
          action_num = ifelse(action_r_collap == "both", 0, 1))
 ```
+
+## E1: Logit model of action selections
 
 ```{r action logit model}
 t_prior <- student_t(df = 7, location = 0, scale = 2.5)
@@ -87,7 +87,7 @@ samples_rt_e1 <- m_rt_e1 %>%
   gather(key = condition, value = param_est, -sample_id) 
 ```
 
-## E1 entropy analysis
+## E1: entropy analysis
 
 Model entropy change across conditions.
 
@@ -147,13 +147,36 @@ samples_entropy_e1_add <- m_entropy_e1_add %>%
   mutate(eff_type = ifelse(str_detect(effect, "int"), "interaction", "main effect")) 
 ```
 
+## E1: information gain
+
+```{r e1 info gain}
+m_ig_e1_add <- stan_lm(
+  ig ~ condition_fact + action_r_collap,
+  data = d_model_e1,
+  prior = R2(0.75),
+  adapt_delta = 0.99
+)
+
+samples_ig_e1_add <- m_ig_e1_add %>% 
+  as.data.frame() %>% 
+  as_tibble() %>% 
+  dplyr::rename(no_goal = `(Intercept)`,
+                learning_beta = condition_factlearning,
+                performance_beta = condition_factperformance,
+                presentation_beta = condition_factpresentation,
+                single_action_beta = action_r_collapsingle) %>% 
+  select(-sigma, -R2, -`log-fit_ratio`) %>% 
+  mutate(sample_id = 1:n()) %>% 
+  gather(key = effect, value = param_est, -sample_id) 
+```
+
 # Experiment 2
 
 ```{r e2 filter}
 d_model_e2 <- d %>%
   filter(manip_check_score >= 2, str_detect(experiment, "e2")) %>% 
   distinct(id, condition, action_response, action_r_collap, action_trial_time, 
-           entropy_change, social_condition) %>% 
+           entropy_change, ig, social_condition) %>% 
   mutate(condition_fact = factor(condition, 
                                  levels = c("nogoal", "performance", "presentation",
                                             "learning")),
@@ -164,7 +187,7 @@ d_model_e2 <- d %>%
 
 ## E2 actions decisions
 
-```{r action logit model e2}
+```{r action logit model e2 interaction}
 t_prior <- student_t(df = 7, location = 0, scale = 2.5)
 
 # remove the presentation condition because it does not have no-social context
@@ -294,7 +317,7 @@ samples_rt_e2 <- m_rt_e2 %>%
   gather(key = condition, value = param_est, -sample_id) 
 ```
 
-## E2: entropy change across conditions.
+## E2: entropy change across conditions
 
 Here we include the additive effects of action resopnse and social condition. Including the interaciton term did not improve model fit and we did not have predictions for any two or three-way interactions.
 
@@ -319,26 +342,51 @@ samples_entropy_e2 <- m_entropy_act_e2 %>%
   gather(key = effect, value = param_est, -sample_id) 
 ```
 
+## E2: ig across conditions
+
+```{r ig model e2}
+m_ig_act_e2 <- stan_lm(
+  ig ~ condition_fact + action_r_collap + social_condition,
+  data = d_model_e2,
+  prior = R2(0.75)
+)
+
+samples_ig_e2 <- m_ig_act_e2 %>% 
+  as.data.frame() %>% 
+  as_tibble() %>% 
+  dplyr::rename(no_goal = `(Intercept)`,
+                learning_beta = condition_factlearning,
+                performance_beta = condition_factperformance,
+                presentation_beta = condition_factpresentation,
+                single_action_beta = action_r_collapsingle,
+                social_beta = social_conditionsocial) %>% 
+  select(-sigma, -R2, -`log-fit_ratio`) %>% 
+  mutate(sample_id = 1:n()) %>% 
+  gather(key = effect, value = param_est, -sample_id) 
+```
+
 # Save posterior samples 
 
 ```{r save models and samples}
 models <- list(action_model_e1 = m_act_logit,
                rt_model_e1 = m_rt_e1,
                ent_model_e1 = m_entropy_e1_add,
+               ig_model_e1 = m_ig_e1_add,
                action_model_e2 = m_act_logit_e2,
                action_model_e2_int = m_act_logit_e2_int,
                rt_model_e1 = m_rt_e2,
-               ent_model_e2 = m_entropy_act_e2
-               )
+               ent_model_e2 = m_entropy_act_e2,
+               ig_model_e1 = m_ig_act_e2)
 
 posteriors <- list(action_logit_samples_e1 = samples_logit_act_e1,
                    rt_samples_e1 = samples_rt_e1,
                    ent_samples_e1 = samples_entropy_e1_add,
+                   ig_samples_e1 = samples_ig_e1_add,
                    action_logit_samples_e2 = samples_logit_act_e2,
                    action_logit_samples_e2_int = samples_logit_act_e2_int,
                    rt_samples_e2 = samples_rt_e2,
-                   ent_samples_e2 = samples_entropy_e2
-                   )
+                   ent_samples_e2 = samples_entropy_e2,
+                   ig_samples_e2 = samples_ig_e2)
 
 saveRDS(posteriors, file = here("data/03_merged_data", "soc-info-posterior-samples.rds"))
 saveRDS(models, file = here("data/03_merged_data", "soc-info-models.rds"))
