--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -291,14 +291,14 @@ front, indicating the correct action(s)--outcome link.
 
 }
 
-\caption[Behavioral results for Exp]{Behavioral results for Exp. 1. A: Proportion of action decisions for each goal condition. Error bars are 95\% binomial CIs computed using a Bayesian beta-binomial model. B: Response times on the action decisions, where each point represents a participant. FIXME C: Belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action. FIXME}\label{fig:e1_behav_results_plot}
+\caption[Behavioral results for Exp]{Behavioral results for Exp. 1. A: Proportion of action decisions for each goal condition. Error bars are 95\% binomial CIs computed using a Bayesian beta-binomial model. B: Response times on the action decisions. C: Belief change (information gain in bits) as a function of condition. Higher values represent more information gained from the action selection.}\label{fig:e1_behav_results_plot}
 \end{figure}
 \end{CodeChunk}
 
 We asked participants to act on one of these toys; importantly, the
 given toy was missing its label, leading to uncertainty about its causal
 structure. We randomly assigned participants into four goal conditions.
-In the \emph{No-Goal} condition we did not specify any goal for
+In the \emph{No-goal} condition we did not specify any goal for
 participants. In the \emph{Learning}, \emph{Performance}, and
 \emph{Presentation} conditions, we asked participants to imagine they
 were toy developers and one day their boss approached them. We
@@ -347,12 +347,12 @@ the highest proportion in the Learning condition, followed by No-goal,
 Performance, and Presentation.
 
 Compared to the No-goal condition, participants selected the single
-action at a greater rate in the Learning condition (\(\beta\) = 1.28,
-{[}0.5, 2.17{]}) and at lower rate in the Presentation context
-(\(\beta\) = -1.41, {[}-2.47, -0.4{]}), with the null value of zero
+action at a greater rate in the Learning condition (\(\beta\) = 1.18,
+{[}0.82, 1.55{]}) and at lower rate in the Presentation context
+(\(\beta\) = -1.53, {[}-2, -1.06{]}), with the null value of zero
 difference condition falling well outside the 95\% HDI, and at similar
-rate in the Performance condition (\(\beta\) = -0.53, {[}-1.43, 0.35{]})
-with the 95\% HDI including the null.
+rate in the Performance condition (\(\beta\) = -0.65, {[}-1.04,
+-0.27{]}) with the 95\% HDI including the null.
 
 \subsubsection{Action decision times:}\label{action-decision-times}
 
@@ -367,18 +367,31 @@ produced similar decision times.
 
 \subsubsection{Belief change:}\label{belief-change}
 
-We quantified participants' beliefs about the toy using entropy, and
-belief change was measured as the difference in entropy before and after
-selecting an action. We modeled change in entropy as a function of goal
-condition and participants' action choices:
-\texttt{$entropy\_change \sim goal\_condition + action\_response$}
+We quantified participants' change in beliefs about the toy using
+information gain. We followed M. Frank (2014) and computed the
+Kullback-Leibler (KL) divergence both before and after participants'
+action selections. The KL divergence gives a measure of the distance
+between the correct\footnote{Note that since the action-effect link was
+  deterministic, the correct belief distribution is a function of
+  participant's action decision. For example, if a participant selected
+  the button action, then \(B_{correct}\) placed 100\% of the
+  probability mass on the button hypothesis.} probability distribution
+and the participant's beliefs about the identity of the unlabeled toy.
+We notate participants' belief distributions as \(B_{prior}\) and
+\(B_{prior+a}\) and the correct distribution as \(B_{correct}\). The
+difference between these KL divergences provides the number of bits of
+information gained due to the action:
+\(IG(a) = D_{KL} ( B_{correct}|| B_{prior} ) - D_{KL} (B_{correct} || B_{prior+a} )\).
+
+We modeled information gain as a function of goal condition and action
+choices: \texttt{$IG \sim goal\_condition + action\_response$}
 (Fig.~\ref{fig:e1_behav_results_plot}C). Across all conditions, people
-who selected the single action showed a greater reduction in entropy
-(\(\beta\) = -0.49, {[}-0.64, -0.33{]}, i.e., learned more from their
-action. We did not see evidence of an interaction between goal and
-action selection. However, a larger proportion of participants selected
-a single action in the Learning context, so learning was more likely in
-this scenario.
+who selected the single action showed a greater gain in bits of
+information (\(\beta_{single}\) = 0.91, {[}0.77, 1.05{]}, i.e., learned
+more from their action. We did not see evidence of an interaction
+between goal and action selection. However, a larger proportion of
+participants selected a single action in the Learning context, so
+learning was more likely in this condition.
 
 \section{Experiment 2}\label{experiment-2}
 
@@ -436,7 +449,7 @@ likely to select the single action when their boss was present
 for a reliable interaction between goal condition and social context
 such that the effect of social context was present in the Learning and
 No-goal conditions, but not in the Performance condition (\(\beta\)
-\(_{int}\) = 1.163, {[}0.01, 2.312{]}).
+\(_{int}\) = 1.148, {[}0.049, 2.296{]}).
 
 \subsubsection{Action decision times:}\label{action-decision-times-1}
 
@@ -445,8 +458,8 @@ participants making slower decisions in the Learning context as compared
 to Performance/Presentation. On average, participants took seconds to
 generate a response in the No-goal condidition and seconds in the
 Learning condition. In contrast, decisions were faster in the
-Performance (\(\beta\) = -7.78 sec, {[}-14.01, -1.52{]}) and
-Presentation (-10.77 seconds, {[}-18.67, -2.73{]}) conditions, which
+Performance (\(\beta\) = -7.67 sec, {[}-14.01, -1.25{]}) and
+Presentation (-10.66 seconds, {[}-18.37, -3.36{]}) conditions, which
 were similar to one another (Fig.~\ref{fig:e2_results}B). There was no
 evidence of a main effect of social context or an interaction between
 goal condition and social context. Note that here we did not see a
@@ -455,13 +468,14 @@ conditions, which is different from the pattern in Exp.~1.
 
 \subsubsection{Belief change:}\label{belief-change-1}
 
-Across all conditions, participants who selected the single action
-showed a greater reduction in entropy (\(\beta\) = -0.35, {[}-0.45,
--0.24{]}. There was weaker evidence of greater reduction in entropy in
-the Learning goal condition (\(\beta\) = -0.12, {[}-0.25, 0.01). There
-was no evidence of a main effect of social context and no two- or
-three-way interactions between social context, goal condition, and
-action choice.
+We replicate the information gain effect from E1: participants who
+selected the single action showed greater information gain across all
+conditions (\(\beta_{single}\) = 0.63, {[}0.4, 0.86{]}. And there was no
+evidence of a main effect of social context and no two- or three-way
+interactions between social context, goal condition, and action choice.
+As in E1, a larger proportion of participants selected the single action
+in the Learning condition, especially in the No-socia context, meaning
+information again was most likely in this learning context.
 
 \subsubsection{BDA model-data fit:}\label{bda-model-data-fit}
 
@@ -585,6 +599,11 @@ NSF \#1456077.
 Castro, R. M., Kalish, C., Nowak, R., Qian, R., Rogers, T., \& Zhu, X.
 (2009). Human active learning. In \emph{Advances in neural information
 processing systems} (pp. 241--248).
+
+\hypertarget{ref-frank2014modeling}{}
+Frank, M. (2014). Modeling the dynamics of classroom education using
+teaching games. In \emph{Proceedings of the annual meeting of the
+cognitive science society} (Vol. 36).
 
 \hypertarget{ref-frank2013throwing}{}
 Frank, M. C. (2013). Throwing out the bayesian baby with the optimal
